# nephele-smo-fork

./: .db.env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  REUSE.toml  Vagrantfile  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  wsgi.py
.builds/: debian.yml-fail  fedora.yml-fail  rockylinux.yml  ubuntu.yml
.github/workflows/: codeql.yml  ossar.yml  pysa.yml  python-package.yml  python-publish.yml
compliance/: README.md  requirements-full.txt  requirements-prod.txt  sbom-cyclonedx.json  sbom-spdx.json
src/: .env  app.py  config.py
src/errors/: error_handlers.py  errors.py
src/models/: __init__.py  graph.py  models.py  service.py
src/routes/: graph.py
src/routes/swagger/: get_graph.yaml  placement.yaml  start.yaml
src/services/: graph_service.py
src/smo/: __init__.py  app.py  config.py
src/smo/cli/: __init__.py  cli.py  commands.py
src/smo/errors/: error_handlers.py
src/smo/flask/: app.py
src/smo/flask/routes/swagger/: stop.yaml
src/smo/models/: __init__.py  graph.py  service.py
src/smo/routes/: graph.py
src/smo/routes/swagger/: deploy.yaml  get_all_graphs.yaml  remove.yaml
src/smo/services/: graph_service.py
src/smo/utils/: kube_helper.py  placement.py  prometheus_helper.py  scaling.py
src/utils/: constant.py  kube_helper.py  placement.py  prometheus_helper.py  scaling.py
tests/: test_app.py  test_arch.py  test_placement.py
