[project]
name = "smo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
    "cachetools>=5.5.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.36.0",
    "gurobipy>=12.0.0",
    "kubernetes>=31.0.0",
    "psycopg2-binary>=2.9.10",
    "pyasn1>=0.6.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rsa>=4.9",
    "websocket-client>=1.8.0",
]

[project.scripts]
smo = "smo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
#packages = ["src/smo"]

#[tool.hatch.build.targets.wheel]
#packages = ["src/smo"]


[dependency-groups]
dev = [
    "abilian-devtools>=0.7.4",
    "coverage>=7.6.7",
    "docformatter>=1.7.5",
]
